Fixed up neoforge version 1.8.2